--- a/views/edit_post.erb
+++ b/views/edit_post.erb
@@ -1,10 +1,13 @@
 <h2>Editing Post: <%= @post[:title] %></h2>
 <form action="/posts/<%= @post[:id] %>" method="post">
-  <label for="title">Post Title:</label> 
-  <input type="text" name="title" value="<%= @post[:title] %>"></br>
-
-  <label>Edit post content below:</label></br>
-  <textarea name="content" rows="5" cols="50"><%= @post[:content] %></textarea>
+  <div>
+    <label for="title">Post Title:</label> 
+    <input type="text" name="title" value="<%= @post[:title] %>">
+  </div>
+  <div>
+    <label>Edit post content below:</label></br>
+    <textarea name="content" rows="5" cols="50"><%= @post[:content] %></textarea>
+  </div>
   <input type="hidden" name="user_id" value="<%= @user[:id] %>">
   <input type="submit" value="Edit Post">
 </form>
