--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -1,10 +1,13 @@
 <h2>Add a New Post</h2>
 <form action="/posts" method="post">
-  <label for="title">Post Title:</label> 
-  <input type="text" name="title" value=""></br>
-
-  <label>Enter new comment below:</label></br>
-  <textarea name="content" rows="5" cols="50"> </textarea>
+  <div>
+    <label for="title">Post Title:</label> 
+    <input type="text" name="title" value="">
+  </div>
+  <div>
+    <label>Enter new comment below:</label></br>
+    <textarea name="content" rows="5" cols="50"> </textarea>
+  </div>
   <input type="hidden" name="user_id" value="<%= @user[:id] %>">
   <input type="submit" value="Create Post">
 </form>
