--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -2,11 +2,11 @@
 <form action="/posts" method="post">
   <div>
     <label for="title">Post Title:</label> 
-    <input type="text" name="title" value="">
+    <input type="text" name="title" value="<%= @post[:title] %>">
   </div>
   <div>
     <label>Enter new comment below:</label></br>
-    <textarea name="content" rows="5" cols="50"> </textarea>
+    <textarea name="content" rows="5" cols="50"><%= @post[:content] %></textarea>
   </div>
   <input type="hidden" name="user_id" value="<%= @user[:id] %>">
   <input type="submit" value="Create Post">
