Posts and comments with only spaces as the content are no longer allowed; made some error messages clearer

--- a/views/edit_post.erb
+++ b/views/edit_post.erb
@@ -5,7 +5,7 @@
     <input type="text" name="title" value="<%= @post[:title] %>">
   </div>
   <div>
-    <label>Edit post content below:</label></br>
+    <label>Edit post body content below:</label></br>
     <textarea name="content" rows="5" cols="50"><%= @post[:content] %></textarea>
   </div>
   <input type="hidden" name="user_id" value="<%= @user[:id] %>">
