--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -5,7 +5,7 @@
     <input type="text" name="title" value="<%= @post[:title] %>">
   </div>
   <div>
-    <label>Enter new comment below:</label></br>
+    <label>Enter post body content below:</label></br>
     <textarea name="content" rows="5" cols="50"><%= @post[:content] %></textarea>
   </div>
   <input type="hidden" name="user_id" value="<%= @user[:id] %>">
